# docs/swagger.json
@@ -13,11 +13,9 @@
             "get": {
                 "security": [
                     {
-                        "AccessToken": []
-                    },
-                    {
                         "AccessToken": [
-                            "admin"
+                            "admin",
+                            "user"
                         ]
                     }
                 ],
@@ -68,6 +66,14 @@
         },
         "/events/{id}": {
             "get": {
+                "security": [
+                    {
+                        "AccessToken": [
+                            "admin",
+                            "user"
+                        ]
+                    }
+                ],
                 "description": "Get event by id",
                 "produces": [
                     "application/json"
@@ -98,6 +104,14 @@
         },
         "/events/{id}/user": {
             "get": {
+                "security": [
+                    {
+                        "AccessToken": [
+                            "admin",
+                            "user"
+                        ]
+                    }
+                ],
                 "description": "Get event by user",
                 "produces": [
                     "application/json"
@@ -130,7 +144,10 @@
             "post": {
                 "security": [
                     {
-                        "BearerAuth": []
+                        "AccessToken": [
+                            "admin",
+                            "user"
+                        ]
                     }
                 ],
                 "description": "Join event",
@@ -170,6 +187,14 @@
         },
         "/events/{id}/{eventId}/leave": {
             "post": {
+                "security": [
+                    {
+                        "AccessToken": [
+                            "admin",
+                            "user"
+                        ]
+                    }
+                ],
                 "description": "Leave event",
                 "produces": [
                     "application/json"
